Instructor dashboard updated with proper informations.
